--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "dev": "nodemon src/server.ts"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seeds/seed.ts"
+  },
   "dependencies": {
     "@prisma/client": "4.4.0",
     "@types/node": "^18.11.9",
@@ -17,7 +20,7 @@
     "@types/express": "^4.17.14",
     "@types/uuid": "^9.0.0",
     "nodemon": "^2.0.20",
-    "prisma": "^4.4.0",
+    "prisma": "^4.7.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3"
   }
