--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@prisma/client": "4.4.0",
     "@types/node": "^18.11.9",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "ts-node": "^10.9.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.14",
     "@types/uuid": "^9.0.0",
     "nodemon": "^2.0.20",
